--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class=" paragraph center">Hello there readers, you are now about to<br>have a deep dive into the topics such as<br>Automata Theory , Trends In Computer Networks, Well Balanced Trees<br>and Big Data Storage and it’s Processing.<br>We hope that you get a clear understanding of the subjects, Cheers</p>
         </div>
         <div class="content-right">
-            <img src="BloggingWebsite\assets\images\man with pc.png" alt="iBlog">
+            <img src=".\assets\images\manwithpc.png" alt="iBlog">
         </div>
     </div>
     <hr>
@@ -48,7 +48,7 @@
     <section id="sub-start" class="cards-wrapper">
       <div class="card-grid-space">
         
-        <a class="card" href="web_client/template/ads.html" style="--bg-img: url('.\assets\images\HistoricPersonalComputersIllustration(2).png')">
+        <a class="card" href="web_client/template/ads.html" style="--bg-img: url('./assets/images/HistoricPersonalComputersIllustration(2).png')">
           <div>
             <h1>Advanced Data Structures</h1>
             <p>Data structures are the heart of programming. Learn more about tree data structure...</p>
