--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </a>
       </div>
       <div class="card-grid-space">
-        <a class="card" href="web_client/template/dmadm.html" style="--bg-img: url('.\assets\images\HistoricPersonalComputersIllustration.png')">
+        <a class="card" href="web_client/template/dmadm.html" style="--bg-img: url('./assets/images/HistoricPersonalComputersIllustration.png')">
           <div>
             <h1>Database Management and Data Mining</h1>
             <p>About some concepts related to Big Data. Learn how Big data is managed and processed...</p>
@@ -73,7 +73,7 @@
         </a>
       </div>
       <div class="card-grid-space">
-        <a class="card" href="web_client/template/cn.html" style="--bg-img: url('.\assets\images\cn.jpg')">
+        <a class="card" href="web_client/template/cn.html" style="--bg-img: url('./assets/images/cn.jpg')">
           <div>
             <h1>Computer Networks</h1>
             <p>Recent Trends in Computer Security. Learn about computer security and its current working trends and markets.</p>
@@ -85,7 +85,7 @@
         </a>
       </div>
       <div class="card-grid-space">
-        <a class="card" href="web_client/template/dsaat.html" style="--bg-img: url('.\assets\images\dsaat.jpg')">
+        <a class="card" href="web_client/template/dsaat.html" style="--bg-img: url('./assets/images/dsaat.jpg')">
           <div>
             <h1>Discrete Structures and Automata Theor</h1>
             <p>Automata Theory Limitations and Applications...</p>
